<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


  <ImageView
      android:id="@+id/www"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/wechat96"
      />
  <RelativeLayout
      android:id="@+id/rt"
      android:layout_centerInParent="true"
      android:layout_below="@+id/www"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      >
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ti" />
  </RelativeLayout>



  <LinearLayout
      android:layout_marginTop="@dimen/dp20"
      android:layout_below="@+id/rt"
      android:background="@drawable/wechat95"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/linearLayout1">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
      <LinearLayout
          android:layout_marginLeft="@dimen/dp40"
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="姓 名:"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_marginLeft="@dimen/dp40"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="员工代码:"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daima"
            />
      </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="@dimen/dp5"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
      <LinearLayout
          android:layout_marginLeft="@dimen/dp40"
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="所属部门:"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bumen"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_marginLeft="@dimen/dp40"
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="手机号码:"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            />
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/dp40"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="工作邮箱:"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/workemil"
          />
    </LinearLayout>

  </LinearLayout>
  <LinearLayout
      android:background="@drawable/wechat95"
      android:orientation="horizontal"
      android:id="@+id/linearLayout2"
      android:layout_below="@+id/linearLayout1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      >
     <ImageView
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dp45"
         android:src="@drawable/ziying"
         />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="自主经营分析平台"
        />
    <Button
        android:id="@+id/btn_ziying"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp25"
        android:text="点击进入"
        android:textColor="@color/white"
        android:background="@drawable/backgroundshap"
        />
  </LinearLayout>
  <LinearLayout
      android:background="@drawable/wechat95"
      android:orientation="horizontal"
      android:id="@+id/linearLayout3"
      android:layout_below="@+id/linearLayout2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      >
    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp45"
        android:src="@drawable/fengxing"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="峰行智能学习平台"
        />
    <Button
        android:id="@+id/btn_fengxing"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp25"
        android:text="点击进入"
        android:textColor="@color/white"
        android:background="@drawable/backgroundshap"
        />
  </LinearLayout>

  <ImageView

      android:layout_marginTop="@dimen/dp10"
      android:layout_marginRight="@dimen/dp10"
      android:id="@+id/shezhi"
      android:layout_alignParentRight="true"
      android:layout_width="@dimen/dp40"
      android:layout_height="@dimen/dp50"
      android:src="@drawable/shezhi"
      />
</RelativeLayout>
