<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.huatai.czx.huataiyijia_master.activity.SettingActivity">
    <RelativeLayout
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
         android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改密码"
            android:textColor="@color/blue"
            />
        <ImageView
            android:layout_marginRight="@dimen/dp10"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/dp35"
            android:layout_height="@dimen/dp25"
            android:src="@drawable/back"
            />
    </RelativeLayout>
 <View
     style="@style/Line"
     />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv1"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/dp35"
            android:layout_height="@dimen/dp25"
            android:src="@drawable/wechat6"
            />
        <EditText
            android:id="@+id/oldpw"
            android:layout_centerVertical="true"
            android:background="@null"
            android:layout_marginRight="@dimen/dp10"
            android:layout_toRightOf="@+id/iv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oldmima"
            android:textColor="@color/blue"
            />
    </RelativeLayout>
    <View
        style="@style/Line"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv2"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/dp35"
            android:layout_height="@dimen/dp25"
            android:src="@drawable/wechat7"
            />
        <EditText
            android:id="@+id/newpw"
            android:layout_centerVertical="true"
            android:background="@null"
            android:layout_marginRight="@dimen/dp10"
            android:layout_toRightOf="@+id/iv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newmima"
            android:textColor="@color/blue"
            />
    </RelativeLayout>
    <View
        style="@style/Line"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv3"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/dp35"
            android:layout_height="@dimen/dp25"
            android:src="@drawable/wechat7"
            />
        <EditText
            android:layout_centerVertical="true"
            android:background="@null"
            android:layout_marginRight="@dimen/dp10"
            android:layout_toRightOf="@+id/iv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/twonewmima"
            android:textColor="@color/blue"
            />
    </RelativeLayout>
    <View
        style="@style/Line"
        />
    <Button
        android:layout_marginTop="@dimen/dp10"
        android:id="@+id/btn_ok"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp25"
        android:text="完成"
        android:textColor="@color/white"
        android:background="@drawable/backgroundshap2"
        />
      <LinearLayout
          android:layout_marginTop="@dimen/dp5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
          <View
              android:layout_gravity="center"
              android:layout_weight="1"
              android:background="@color/gary"
              android:layout_width="0dp"
              android:layout_height="@dimen/dp1"
              />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="@dimen/dp25"
              android:text="其他登录方式"

              />
          <View
              android:layout_gravity="center"
              android:layout_weight="1"
              android:background="@color/gary"
              android:layout_width="0dp"
              android:layout_height="@dimen/dp1"
              />
      </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35"
        >
        <TextView
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开启手势新密码"
            />
        <Switch
            android:layout_alignParentRight="true"
            android:id="@+id/s_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp12"
            android:checked="false"
            android:longClickable="false"
            android:textOff="OFF"
            android:textOn="ON"
            android:theme="@style/SwitchStyle" />
    </RelativeLayout>
    <View
        style="@style/Line"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35"
        >
        <TextView
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开启手势指纹密码"
            />
        <Switch
            android:layout_alignParentRight="true"
            android:id="@+id/switch_zhiwen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp12"
            android:checked="false"
            android:longClickable="false"
            android:textOff="OFF"
            android:textOn="ON"
            android:theme="@style/SwitchStyle" />
    </RelativeLayout>
    <View
        style="@style/Line"
        />
    <Button
        android:layout_marginTop="@dimen/dp10"
        android:id="@+id/btn_back"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp25"
        android:text="退出"
        android:textColor="@color/white"
        android:background="@drawable/backgroundshap3"
        />
</LinearLayout>
